--- a/MuShop/MyShop.Core/MyShop.Core.csproj
+++ b/MuShop/MyShop.Core/MyShop.Core.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Contracts\IBasketService.cs" />
     <Compile Include="Contracts\IRepository.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Basket.cs" />
     <Compile Include="Models\BasketItem.cs" />
