--- a/MuShop/MyShop.WebUI.Tests/MyShop.WebUI.Tests.csproj
+++ b/MuShop/MyShop.WebUI.Tests/MyShop.WebUI.Tests.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mocks\MockeContents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -93,6 +94,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MyShop.Core\MyShop.Core.csproj">
+      <Project>{3799145A-3768-4D34-9452-5BD45A4F1088}</Project>
+      <Name>MyShop.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MyShop.WebUI\MyShop.WebUI.csproj">
       <Project>{67774257-E0F6-4855-AA07-4330EAB0CDFC}</Project>
       <Name>MyShop.WebUI</Name>
